--- a/frontend/automat/logic/templates/compare_int.tpl.html
+++ b/frontend/automat/logic/templates/compare_int.tpl.html
@@ -33,6 +33,7 @@
             <option value="lower_equals"><=</option>
         </select>
         <label for="value">Value</label>
-        <input id="value" type="number" class="form-control input-sm" ng-model="ctrl.argument" ng-change="ctrl.update()"/>
+        <input id="value" type="number" class="form-control input-sm" ng-model="ctrl.argument"
+               ng-change="ctrl.update()"/>
     </div>
 </div>
